Bug 1550531. Fix -moz-element memory leak and related shutdown hangs. r=emilio a=jcristau